# grand-archive-meta

./: .gitignore  API.md  ARCHITECTURE.md  CONTRIBUTING.md  COST_ANALYSIS_UPDATED.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOY_TO_VERCEL.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  FINAL_SUMMARY.md  GETTING_STARTED.md  GITHUB_SETUP.md  LICENSE  MONGODB_SETUP.md  PROJECT_SUMMARY.md  QUICK_START_ACTUAL.md  README.md  SHARED_MONGODB_BENEFITS.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_DEPLOYMENT_SUCCESS.md  docker-compose.yml  setup.sh  start-dev.sh  verify.sh
.github/: WORKFLOWS-SUMMARY.md
backend/: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  QUICKSTART.md  README.md  run-local.sh
backend/docs/: API.md
backend/src/: config.rs  main.rs  scheduler.rs
backend/src/clients/: gatcg_api.rs  mod.rs  omni_web_api.rs  omnidex_api.rs
backend/src/controllers/: champions.rs  decklists.rs  events.rs  health.rs  meta.rs  mod.rs
backend/src/middleware/: cache.rs  cors.rs  mod.rs
backend/src/models/: card.rs  champion.rs  decklist.rs  event.rs  mod.rs  standing.rs
backend/src/services/: card_sync.rs  event_crawler.rs  meta_analysis.rs  mod.rs
database/: INDEX.md  QUICK_REFERENCE.md  README.md  indexes.js  schema.md  setup.sh  validate.js
frontend/: .env.local.example  .env.production.example  .vercel-commands.md  .vercel-secrets.md  .vercelignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP.md  (+7 more)
(+57 files in other folders)
